sua cau truc file

--- a/Trang-chu/Trang-chu.html
+++ b/Trang-chu/Trang-chu.html
@@ -24,8 +24,8 @@
 
                 </div>
                 <div class="login-register">
-                    <button>Đăng nhập</button>
-                    <button>Đăng kí</button>
+                    <button class="login">Đăng nhập</button>
+                    <button class="register">Đăng kí</button>
                 </div>
             </div>
             <div class="content">
