--- a/Trang-chu/Trang-chu.html
+++ b/Trang-chu/Trang-chu.html
@@ -11,9 +11,9 @@
     <div class="viewport">
         <div class="menu">
             <div class="logo-name">
-                <img id="logo" src="logo.svg" alt="logo">
+                <img id="logo" src="logo1.png" alt="logo">
                 <button id="trang-chu">
-                    <a href="http://127.0.0.1:5500/HTML/Web-Vinmec/Trang-chu.html">Trang chủ</a>
+                    <a href="file:///D:/Workspace/HTML/Web-Vinmec/Trang-chu/Trang-chu.html">Trang chủ</a>
                 </button>
             </div>
         </div>
@@ -24,8 +24,8 @@
 
                 </div>
                 <div class="login-register">
-                    <button class="login">Đăng nhập</button>
-                    <button class="register">Đăng kí</button>
+                    <button class="login"><a href="file:///D:/Workspace/HTML/Web-Vinmec/Login/login.html">Đăng nhập</a></button>
+                    <button class="register"><a href="file:///D:/Workspace/HTML/Web-Vinmec/Register/Register.html">Đăng kí</a></button>
                 </div>
             </div>
             <div class="content">
