--- a/Login/login.html
+++ b/Login/login.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="android-icon-192x192.webp">
+    <title>Đăng nhập | Vinmec</title>
     <link rel="stylesheet" href="login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="login.js">
@@ -30,7 +31,7 @@
             <div class="btn_login">
                 <button>Đăng nhập</button>
             </div>
-            <div class="text_register">Bạn chưa có tài khoản?<a href=""> đăng ký!</a></div>
+            <div class="text_register">Bạn chưa có tài khoản?<a href="file:///D:/Workspace/HTML/Web-Vinmec/Register/Register.html"> đăng ký!</a></div>
             </div>
         </form>
     </div>
