--- a/Register/Register.html
+++ b/Register/Register.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="android-icon-192x192.webp">
+    <title>Đăng kí | Vinmec</title>
     <link rel="stylesheet" href="Register.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="login.js">
@@ -38,7 +39,7 @@
             <div class="btn_register">
                 <button>Đăng ký</button>
             </div>
-            <div class="text_register">Bạn đã có tài khoản?<a href=""> đăng nhập!</a></div>
+            <div class="text_register">Bạn đã có tài khoản?<a href="file:///D:/Workspace/HTML/Web-Vinmec/Login/login.html"> đăng nhập!</a></div>
             </div>
         </form>
     </div>
