--- a/Trang-chu/Trang-chu.html
+++ b/Trang-chu/Trang-chu.html
@@ -6,6 +6,7 @@
     <title>Bệnh viện Vinmec</title>
     <link rel="icon" type="image/x-icon" href="android-icon-192x192.webp">
     <link rel="stylesheet" href="Trang-chu.css">
+    <script src="https://kit.fontawesome.com/ac89eeccb2.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="viewport">
@@ -13,6 +14,7 @@
             <div class="logo-name">
                 <img id="logo" src="logo1.png" alt="logo">
                 <button id="trang-chu">
+                    <i class="fa-solid fa-house" style="color: #1DCBDF;"></i>
                     <a href="file:///D:/Workspace/HTML/Web-Vinmec/Trang-chu/Trang-chu.html">Trang chủ</a>
                 </button>
             </div>
@@ -20,8 +22,8 @@
         <div class="main">
             <div class="header">
                 <div class="search">
+                    <i class="fa-solid fa-magnifying-glass"></i>
                     <input type="text" placeholder="Tìm kiếm vật tư và thiết bị">
-
                 </div>
                 <div class="login-register">
                     <button class="login"><a href="file:///D:/Workspace/HTML/Web-Vinmec/Login/login.html">Đăng nhập</a></button>
@@ -29,7 +31,9 @@
                 </div>
             </div>
             <div class="content">
-
+                <div class="title-content">
+                    <p>Trang Chủ</p>
+                </div>
             </div>
         </div>
     </div>
