--- a/Register/Register.html
+++ b/Register/Register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="android-icon-192x192.webp">
+    <link rel="icon" type="image/x-icon" href="..//Assets/logo/android-icon-192x192.webp">
     <title>Đăng kí | Vinmec</title>
     <link rel="stylesheet" href="Register.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
