--- a/Trang-chu-admin/Trangchu.html
+++ b/Trang-chu-admin/Trangchu.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bệnh viện Vinmec</title>
-    <link rel="icon" type="image/x-icon" href="android-icon-192x192.webp">
+    <link rel="icon" type="image/x-icon" href="..//Assets/logo/android-icon-192x192.webp">
     <link rel="stylesheet" href="Trang-chu.css">
 </head>
 <body>
     <div class="viewport">
         <div class="menu">
             <div class="logo-name">
-                <img id="logo" src="logo1.png" alt="logo">
+                <img id="logo" src="..//Assets/logo/logo1.png" alt="logo">
                 <button id="trang-chu">
                     <a href="file:///D:/Workspace/HTML/Web-Vinmec/Trang-chu/Trang-chu.html">Trang chủ</a>
                 </button>
