--- a/Trang-chu/Trang-chu.html
+++ b/Trang-chu/Trang-chu.html
@@ -1,41 +1,49 @@
-<!DOCTYPE html>
-<html lang="vi">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bệnh viện Vinmec</title>
-    <link rel="icon" type="image/x-icon" href="android-icon-192x192.webp">
-    <link rel="stylesheet" href="Trang-chu.css">
-    <script src="https://kit.fontawesome.com/ac89eeccb2.js" crossorigin="anonymous"></script>
-</head>
-<body>
-    <div class="viewport">
-        <div class="menu">
-            <div class="logo-name">
-                <img id="logo" src="logo1.png" alt="logo">
-                <button id="trang-chu">
-                    <i class="fa-solid fa-house" style="color: #1DCBDF;"></i>
-                    <a href="file:///D:/Workspace/HTML/Web-Vinmec/Trang-chu/Trang-chu.html">Trang chủ</a>
-                </button>
+    <!DOCTYPE html>
+    <html lang="vi">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Bệnh viện Vinmec</title>
+        <link rel="icon" type="image/x-icon" href="..//Assets/logo/android-icon-192x192.webp">
+        <link rel="stylesheet" href="Trang-chu.css">
+    </head>
+    <body>
+        <div class="viewport">
+            <div class="menu">
+                <div class="logo-name">
+                    <img id="logo" src="..//Assets/logo/logo1.png" alt="logo">
+                    <button id="trang-chu">
+                        <img src="..//Assets/icon/home.png" alt="">
+                        <a href="file:///D:/Workspace/HTML/Web-Vinmec/Trang-chu/Trang-chu.html">Trang chủ</a>
+                    </button>
+                </div>
+            </div>
+            <div class="main">
+                <div class="header">
+                    <div class="search">
+                        <img src="..//Assets/icon/magnifying-glass-solid.svg" alt="">
+                        <input type="text" placeholder="Tìm kiếm vật tư và thiết bị">
+                    </div>
+                    <div class="login-register">
+                        <button class="login"><a href="file:///D:/Workspace/HTML/Web-Vinmec/Login/login.html">Đăng nhập</a></button>
+                        <button class="register"><a href="file:///D:/Workspace/HTML/Web-Vinmec/Register/Register.html">Đăng kí</a></button>
+                    </div>
+                </div>
+                <div class="content">
+                    <div class="title-content">
+                        <p>Trang Chủ</p>
+                    </div>
+                    <div class="swiper-swapper">
+                        <div class="swiper-slide">
+                            
+                        </div>
+                        <div class="swiper-slide"></div>
+                        <div class="swiper-slide"></div>
+                        <div class="swiper-slide"></div>
+                        <div class="swiper-slide"></div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="main">
-            <div class="header">
-                <div class="search">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                    <input type="text" placeholder="Tìm kiếm vật tư và thiết bị">
-                </div>
-                <div class="login-register">
-                    <button class="login"><a href="file:///D:/Workspace/HTML/Web-Vinmec/Login/login.html">Đăng nhập</a></button>
-                    <button class="register"><a href="file:///D:/Workspace/HTML/Web-Vinmec/Register/Register.html">Đăng kí</a></button>
-                </div>
-            </div>
-            <div class="content">
-                <div class="title-content">
-                    <p>Trang Chủ</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</body>
-</html>
+    </body>
+    </html>
