--- a/Login/login.html
+++ b/Login/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,57 +8,81 @@
     <title>Đăng nhập | Vinmec</title>
     <link rel="stylesheet" href="login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="login.js">
-    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script>
-        $(document).ready(function(){
-        $(".btn-login").click(function(e){
-            e.preventDefault();
-            var name = $("#name").val();
-            var password = $("#password").val();
-            var errorName = "";
-            var errorPassword = "";
+        $(document).ready(function () {
+            $(".btn-login").click(function (e) {
+                e.preventDefault();
+                var name = $("#name").val();
+                var password = $("#password").val();
+                var errorName = "";
+                var errorPassword = "";
 
-            if(name === ''){
-                errorName = 'Tên đăng nhập không được để trống';
-                $(".error-name").text(errorName);
-            } else if(/\d/.test(name)){
-                errorName = 'Tên đăng nhập không được chứa số';
-                $(".error-name").text(errorName);
-            } else {
-                $(".error-name").text("");
-            }
+                if (name === '') {
+                    errorName = 'Tên đăng nhập không được để trống';
+                    $(".error-name").text(errorName);
+                } else if (name.length < 6) {
+                    errorName = 'Tên đăng nhập ít nhất 6 kí tự';
+                    $(".error-name").text(errorName);
+                } else {
+                    $(".error-name").text("");
+                }
 
-            if(password === ''){
-                errorPassword = 'Mật khẩu không được để trống';
-                $(".error-password").text(errorPassword);
-            } else if(password.length < 8 || !/[A-Z]/.test(password) || !/\W/.test(password) || !/\d/.test(password)){
-                errorPassword = "Mật khẩu cần ít nhất 8 ký tự, bao gồm chữ hoa, kí tự đặc biệt và số";
-                $(".error-password").text(errorPassword);
-            } else {
-                $(".error-password").text("");
-            }
+                if (password === '') {
+                    errorPassword = 'Mật khẩu không được để trống';
+                    $(".error-password").text(errorPassword);
+                } else if (password.length < 8 || !/[A-Z]/.test(password) || !/\W/.test(password) || !/\d/.test(password)) {
+                    errorPassword = "Mật khẩu cần ít nhất 8 ký tự, bao gồm chữ hoa, kí tự đặc biệt và số";
+                    $(".error-password").text(errorPassword);
+                } else {
+                    $(".error-password").text("");
+                }
 
-            if(name === "huydat" && password === "Huydat201!"){
-                window.location.href = "file:///D:/Workspace/HTML/Web-Vinmec/Trang-chu-admin/Trangchu.html";
+                if (name === "huydat" && password === "Huydat201!") {
+                    var rememberLogin = $(".text_remember_login input[type='checkbox']").prop("checked");
+                    
+                    if (rememberLogin) {
+                        localStorage.setItem("username", name);
+                        localStorage.setItem("password", password);
+                    } else {
+                        localStorage.removeItem("username");
+                        localStorage.removeItem("password");
+                    }
+
+                    window.location.href = "file:///D:/Workspace/HTML/Web-Vinmec/Trang-chu-admin/Trangchu.html";
+                }
+            });
+
+            $(".input_box i").click(function () {
+                var passwordField = $("#password");
+                if (passwordField.attr("type") === "password") {
+                    passwordField.attr("type", "text");
+                    $(this).removeClass("bi-eye-slash").addClass("bi-eye");
+                } else {
+                    passwordField.attr("type", "password");
+                    $(this).removeClass("bi-eye").addClass("bi-eye-slash");
+                }
+            });
+
+            var savedUsername = localStorage.getItem("username");
+            var savedPassword = localStorage.getItem("password");
+            if (savedUsername && savedPassword) {
+                $("#name").val(savedUsername);
+                $("#password").val(savedPassword);
+                $(".text_remember_login input[type='checkbox']").prop("checked", true);
             }
         });
-        $("btn-close").click(function(){
-            window.location.href = "file:///D:/Workspace/HTML/Web-Vinmec/Trang-chu/Trang-chu.html";
-        })
-    });
-
-
     </script>
- 
-    
-
 </head>
+
 <body>
     <div class="body_login">
         <form action="" id="form">
             <div class="btn_close">
-                <button class="btn_close"><i class="bi bi-x-lg"></i></button>
+                <a href="file:///D:/Workspace/HTML/Web-Vinmec/Trang-chu/Trang-chu.html">
+                    <i class="bi bi-x-lg"></i>
+                </a>
             </div>
             <h1>Đăng nhập</h1>
             <div class="input_box">
@@ -69,14 +94,17 @@
                 <i class="bi bi-eye-slash"></i>
                 <span class="error-password error" style="color: red;"></span>
             </div>
-            <div class="text_forget_pass"><a href="">Quên mật khẩu?</a>
+            <div class="text_remember_login">
+                <input type="checkbox">
+                <span> Lưu thông tin đăng nhập</span>
             </div>
             <div class="btn_login">
                 <button class="btn-login">Đăng nhập</button>
             </div>
-            <div class="text_register">Bạn chưa có tài khoản?<a href="file:///D:/Workspace/HTML/Web-Vinmec/Register/Register.html"> đăng ký!</a></div>
-            </div>
+            <div class="text_register">Bạn chưa có tài khoản?<a
+                    href="file:///D:/Workspace/HTML/Web-Vinmec/Register/Register.html"> đăng ký!</a></div>
         </form>
     </div>
 </body>
-</html>     
+
+</html>
