--- a/Trang-chu/Trang-chu.html
+++ b/Trang-chu/Trang-chu.html
@@ -25,8 +25,8 @@
                         <input type="text" placeholder="Tìm kiếm vật tư và thiết bị">
                     </div>
                     <div class="login-register">
-                        <button class="login"><a href="file:///D:/Workspace/HTML/Web-Vinmec/Login/login.html">Đăng nhập</a></button>
-                        <button class="register"><a href="file:///D:/Workspace/HTML/Web-Vinmec/Register/Register.html">Đăng kí</a></button>
+                        <button class="login"><a href="../Login/login.html">Đăng nhập</a></button>
+                        <button class="register"><a href="../Register/Register.html">Đăng kí</a></button>
                     </div>
                 </div>
                 <div class="content">
