--- a/Login/login.html
+++ b/Login/login.html
@@ -50,7 +50,7 @@
                         localStorage.removeItem("password");
                     }
 
-                    window.location.href = "file:///D:/Workspace/HTML/Web-Vinmec/Trang-chu-admin/Trangchu.html";
+                    window.location.href = "../../../HTML/Web-Vinmec/Trang-chu-admin/Trangchu.html";
                 }
             });
 
@@ -80,7 +80,7 @@
     <div class="body_login">
         <form action="" id="form">
             <div class="btn_close">
-                <a href="file:///D:/Workspace/HTML/Web-Vinmec/Trang-chu/Trang-chu.html">
+                <a href="../Trang-chu/Trang-chu.html">
                     <i class="bi bi-x-lg"></i>
                 </a>
             </div>
