thay doi trang chu admin

--- a/Login/login.html
+++ b/Login/login.html
@@ -50,7 +50,7 @@
                         localStorage.removeItem("password");
                     }
 
-                    window.location.href = "../../../HTML/Web-Vinmec/Trang-chu-admin/Trangchu.html";
+                    window.location.href = "../Trang-chu-admin/Trang-chu.html";
                 }
             });
 
@@ -102,7 +102,7 @@
                 <button class="btn-login">Đăng nhập</button>
             </div>
             <div class="text_register">Bạn chưa có tài khoản?<a
-                    href="file:///D:/Workspace/HTML/Web-Vinmec/Register/Register.html"> đăng ký!</a></div>
+                    href="../Register/Register.html"> đăng ký!</a></div>
         </form>
     </div>
 </body>
