--- a/Trang-chu/Trang-chu.html
+++ b/Trang-chu/Trang-chu.html
@@ -46,86 +46,7 @@
                 <span>Trang chủ</span>
               </a>
             </li>
-            <li class="item">
-              <a href="#" class="link flex">
-                <i class="bx bxs-grid-alt"></i>
-                <span>Danh mục</span>
-              </a>
-            </li>
           </ul>
-
-          <ul class="menu-item">
-            <div class="menu-title flex">
-              <span class="title">Editor</span>
-              <span class="line"></span>
-            </div>
-            <li class="item">
-              <a href="#" class="link flex">
-                <i class="bx bxs-data"></i>
-                <span>Vật tư và thiết bị</span>
-              </a>
-            </li>
-            <li class="item">
-              <a href="#" class="link flex">
-                <i class="bx bxs-user-circle"></i>
-                <span>Tài khoản</span>
-              </a>
-            </li>
-          </ul>
-
-          <ul class="menu-item">
-            <div class="menu-title flex">
-              <span class="title">Management</span>
-              <span class="line"></span>
-            </div>
-            <li class="item">
-              <a href="#" class="link flex">
-                <i class="bx bxs-group"></i>
-                <span>Nhân viên</span>
-              </a>
-            </li>
-            <li class="item">
-              <a href="#" class="link flex">
-                <i class="bx bxs-building"></i>
-                <span>Phòng ban</span>
-              </a>
-            </li>
-          </ul>
-
-          <ul class="menu-item">
-            <div class="menu-title flex">
-              <span class="title">Document</span>
-              <span class="line"></span>
-            </div>
-            <li class="item">
-              <a href="#" class="link flex">
-                <i class="bx bxs-archive-out"></i>
-                <span>Phiếu xuất</span>
-              </a>
-            </li>
-            <li class="item">
-              <a href="#" class="link flex">
-                <i class="bx bxs-archive-in"></i>
-                <span>Phiếu nhập</span>
-              </a>
-            </li>
-            <li class="item">
-              <a href="#" class="link flex">
-                <i class="bx bxs-folder-minus"></i>
-                <span>Báo cáo</span>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <div class="sidebar-profile flex">
-          <span class="nav-image">
-            <img src="../Assets/logo/avata.avif" alt="logo-img" />
-          </span>
-          <div class="data-text">
-            <span class="name">Nguyễn Huy Đạt</span>
-            <span class="email">Admin</span>
-          </div>
-        </div>
       </div>
     </nav>
     
@@ -146,7 +67,7 @@
           <button class="btn btn-light">Search</button>
         </form>
         <button class="btn btn-light">
-          <a class="btn" href="../Login/login.html">Đăng xuất</a>
+          <a class="btn" href="../Login/login.html">Đăng nhập</a>
         </button>
       </div>
     </nav>
