--- a/Trang-chu-admin/Trang-chu-admin.html
+++ b/Trang-chu-admin/Trang-chu-admin.html
@@ -137,7 +137,7 @@
                 <span class="email">Admin</span>
                 <span style="margin-left: 60px;" class="icon-out">
                   <a href="../Login/login.html">
-                    <i  style="font-size: 30px;" class='bx bx-log-out'></i>
+                    <i  style="font-size: 25px;" class='btn btn-outline-danger bx bx-log-out'></i>
                   </a>
                 </span>
               </div>
@@ -165,10 +165,10 @@
                     placeholder="Tìm kiếm vật tư và thiết bị"
                   />
                 </div>
-                <button class="btn btn-light">Search</button>
+                <button class="btn btn-outline-info ms-1">Search</button>
               </form>
             </div>
-            <button class="btn-out btn btn-light">
+            <button class="btn-out btn btn-outline-danger">
               <a class="btn" href="../Login/login.html">Đăng xuất</a>
             </button>
           </div>
