--- a/Trang-chu/Trang-chu.html
+++ b/Trang-chu/Trang-chu.html
@@ -19,57 +19,218 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Trang-chu.css" />
     <script src="Trang-chu.js" defer></script>
   </head>
   <body>
-    <nav class="sidebar locked">
-      <div class="logo-items flex">
-        <span class="nav-image">
-          <img src="../Assets/logo/android-icon-192x192.webp" alt="logo_img" />
-        </span>
-        <span class="logo-name">VINMEC</span>
-        <i class="bx bx-lock-alt" id="lock-icon" title="Unlock Sidebar"></i>
-        <i class="bx bx-x" id="sidebar-close"></i>
+    <div class="row">
+      <div class="colum-sidebar">
+        <nav class="sidebar locked">
+          <div class="logo-items flex">
+            <span class="nav-image">
+              <img
+                src="../Assets/logo/android-icon-192x192.webp"
+                alt="logo_img"
+              />
+            </span>
+            <span class="logo-name">VINMEC</span>
+            <i class="bx bx-lock-alt" id="lock-icon" title="Unlock Sidebar"></i>
+            <i class="bx bx-x" id="sidebar-close"></i>
+          </div>
+
+          <div class="menu-container">
+            <div class="menu-items">
+              <ul class="menu-item">
+                <div class="menu-title flex">
+                  <span class="title">Dashboard</span>
+                  <span class="line"></span>
+                </div>
+                <li class="item trang-chu">
+                  <a href="#" class="link flex">
+                    <i class="bx bxs-home"></i>
+                    <span>Trang chủ</span>
+                  </a>
+                </li>
+              </ul>
+
+            </div>
+            <div class="sidebar-profile flex">
+              <span class="nav-image">
+                <img src="../Assets/logo/avatar-ng.jpg" alt="logo-img" />
+              </span>
+              <div class="data-text">
+                <span class="name">Đăng nhập</span>
+                <span class="email"></span>
+                <span style="margin-left: 100px;" class="icon-out">
+                  <a class="btn btn-outline-primary btn-in" href="../Login/login.html">
+                    <i  style="font-size: 25px;" class='bx bx-log-in'></i>
+                  </a>
+                </span>
+              </div>
+            </div>
+          </div>
+        </nav>
       </div>
 
-      <div class="menu-container">
-        <div class="menu-items">
-          <ul class="menu-item">
-            <div class="menu-title flex">
-              <span class="title">Dashboard</span>
-              <span class="line"></span>
-            </div>
-            <li class="item trang-chu">
-              <a href="#" class="link flex">
-                <i class="bx bxs-home"></i>
-                <span>Trang chủ</span>
+      <div class="colum-content">
+        <nav class="navbar navbar-expand-sm bg-light">
+          <div class="container">
+            <div class="nav-left">
+              <i class="bx bx-menu" id="sidebar-open"></i>
+              <a class="navbar-brand" href="#">
+                <span class="nav-image">
+                  <img src="../Assets/logo/avatar-ng.jpg" alt="" />
+                </span>
               </a>
-            </li>
-          </ul>
+              <form class="d-flex search-form">
+                <div class="search-box-container">
+                  <i class='bx bx-search search-icon'></i>
+                  <input
+                    class="search-box form-control me-2"
+                    type="text"
+                    placeholder="Tìm kiếm vật tư và thiết bị"
+                  />
+                </div>
+                <button class="btn btn-outline-info ms-1">Search</button>
+              </form>
+            </div>
+            <button class="btn-in btn btn-outline-primary">
+              <a class="btn" href="../Login/login.html">Đăng nhập</a>
+            </button>
+          </div>
+        </nav>
+        <div class="colum-title">
+          <p>Trang chủ</p>
+        </div>
+        <div id="carouselId" class="carousel slide" data-bs-ride="carousel">
+          <ol class="carousel-indicators">
+            <li
+              data-bs-target="#carouselId"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="First slide"
+            ></li>
+            <li
+              data-bs-target="#carouselId"
+              data-bs-slide-to="1"
+              aria-label="Second slide"
+            ></li>
+            <li
+              data-bs-target="#carouselId"
+              data-bs-slide-to="2"
+              aria-label="Third slide"
+            ></li>
+            <li
+              data-bs-target="#carouselId"
+              data-bs-slide-to="3"
+              aria-label="Third slide"
+            ></li>
+            <li
+              data-bs-target="#carouselId"
+              data-bs-slide-to="4"
+              aria-label="Third slide"
+            ></li>
+            <li
+              data-bs-target="#carouselId"
+              data-bs-slide-to="5"
+              aria-label="Third slide"
+            ></li>
+            <li
+              data-bs-target="#carouselId"
+              data-bs-slide-to="6"
+              aria-label="Third slide"
+            ></li>
+            <li
+              data-bs-target="#carouselId"
+              data-bs-slide-to="7"
+              aria-label="Third slide"
+            ></li>
+          </ol>
+          <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+              <img
+                src="../Assets/content/slide/slide-1.jpg"
+                class="w-100 d-block"
+                alt="First slide"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="../Assets/content/slide/slide-2.jpg"
+                class="w-100 d-block"
+                alt="Second slide"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="../Assets/content/slide/slide-3.jpg"
+                class="w-100 d-block"
+                alt="Third slide"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="../Assets/content/slide/slide-4.jpg"
+                class="w-100 d-block"
+                alt="Third slide"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="../Assets/content/slide/slide-5.jpg"
+                class="w-100 d-block"
+                alt="Third slide"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="../Assets/content/slide/slide-6.jpg"
+                class="w-100 d-block"
+                alt="Third slide"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="../Assets/content/slide/slide-7.jpg"
+                class="w-100 d-block"
+                alt="Third slide"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="../Assets/content/slide/slide-8.jpg"
+                class="w-100 d-block"
+                alt="Third slide"
+              />
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselId"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"><span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselId"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"><span>
+          </button>
+        </div>
+        <div class="colum-title">
+          <p>Vật tư và thiết bị</p>
+        </div>
       </div>
-    </nav>
-    
-    <nav class="navbar navbar-expand-sm navbar-brand bg-light">
-      <div class="container">
-        <i class="bx bx-menu" id="sidebar-open"></i>
-        <a class="navbar-brand" href="#">
-          <span class="nav-image">
-            <img src="../Assets/logo/avata.avif" alt="" />
-          </span>
-        </a>
-        <form class="d-flex">
-          <input
-            class="search-box form-control me-2"
-            type="text"
-            placeholder="Search......"
-          />
-          <button class="btn btn-light">Search</button>
-        </form>
-        <button class="btn btn-light">
-          <a class="btn" href="../Login/login.html">Đăng nhập</a>
-        </button>
-      </div>
-    </nav>
+    </div>
   </body>
 </html>
