--- a/Trang-chu-admin/Trang-chu-admin.html
+++ b/Trang-chu-admin/Trang-chu-admin.html
@@ -137,7 +137,7 @@
                 <span class="name">Nguyễn Huy Đạt</span>
                 <span class="email">Admin</span>
                 <span style="margin-left: 60px;" class="icon-out">
-                  <a href="../Login/login.html">
+                  <a href="../Trang-chu/Trang-chu.html">
                     <i  style="font-size: 25px;" class='btn btn-outline-danger bx bx-log-out'></i>
                   </a>
                 </span>
@@ -170,7 +170,7 @@
               </form>
             </div>
             <button class="btn-out btn btn-outline-danger">
-              <a class="btn" href="../Login/login.html">Đăng xuất</a>
+              <a class="btn" href="../Trang-chu/Trang-chu.html">Đăng xuất</a>
             </button>
           </div>
         </nav>
