update thanh navbar

--- a/Trang-chu/Trang-chu.html
+++ b/Trang-chu/Trang-chu.html
@@ -102,7 +102,7 @@
               </form>
             </div>
             <button class="btn-in btn btn-outline-primary">
-              <a class="btn" href="../Login/login.html">Đăng nhập</a>
+              <a style="text-decoration: none;" class="btn" href="../Login/login.html">Đăng nhập</a>
             </button>
           </div>
         </nav>
