--- a/Trang-chu-admin/Trang-chu-admin.html
+++ b/Trang-chu-admin/Trang-chu-admin.html
@@ -53,7 +53,7 @@
                   <span class="line"></span>
                 </div>
                 <li class="item trang-chu">
-                  <a href="#" class="link flex">
+                  <a href="../Trang-chu-admin/Trang-chu-admin.html" class="link flex">
                     <i class="bx bxs-home"></i>
                     <span>Trang chủ</span>
                   </a>
@@ -78,7 +78,7 @@
                   </a>
                 </li>
                 <li class="item">
-                  <a href="#" class="link flex">
+                  <a href="../Tai-Khoan/Tai-Khoan.html" class="link flex">
                     <i class="bx bxs-user-circle"></i>
                     <span>Tài khoản</span>
                   </a>
