--- a/Trang-chu-admin/Trang-chu-admin.html
+++ b/Trang-chu-admin/Trang-chu-admin.html
@@ -298,6 +298,49 @@
         <div class="colum-title">
           <p>Vật tư và thiết bị</p>
         </div>
+        <div class="colum-supplies row justify-content-between">
+          <div class="card col shadow-md">
+            <img class="card-img-top" src="../Assets/content/supplies/kim-tiem.png" alt="" />
+            <div class="card-body">
+              <h4 class="card-title">Kim Tiêm</h4>
+            </div>
+            <div class="icon-shopping">
+              <i class='bx bxs-shopping-bag'></i>
+              <p id="">1</p>
+            </div>
+          </div>
+          <div class="card col">
+            <img class="card-img-top" src="../Assets/content/supplies/khau-trang.png" alt="" />
+            <div class="card-body">
+              <h4 class="card-title">Khẩu Trang</h4>
+            </div>
+            <div class="icon-shopping">
+              <i class='bx bxs-shopping-bag'></i>
+              <p id="">1</p>
+            </div>
+          </div>
+          <div class="card col">
+            <img class="card-img-top" src="../Assets/content/supplies/ao-blue.png" alt="" />
+            <div class="card-body">
+              <h4 class="card-title">Áo Blue</h4>
+            </div>
+            <div class="icon-shopping">
+              <i class='bx bxs-shopping-bag'></i>
+              <p id="">1</p>
+            </div>
+          </div>
+          <div class="card col">
+            <img class="card-img-top" src="../Assets/content/supplies/ao-bac-si.png" alt="" />
+            <div class="card-body">
+              <h4 class="card-title">Áo Phẫu Thuật</h4>
+            </div>
+            <div class="icon-shopping">
+              <i class='bx bxs-shopping-bag'></i>
+              <p id="">1</p>
+            </div>
+          </div>
+          
+        </div>
       </div>
     </div>
   </body>
