--- a/Danh-muc/Danh-muc.html
+++ b/Danh-muc/Danh-muc.html
@@ -178,10 +178,12 @@
           <p>Danh mục</p>
         </div>
         <div class="btn-add mb-5">
-            <button type="button">Tạo</button>
+            <button id="TaoTK" type="button" class="m-2 rounded-2">
+                Tạo
+              </button>
         </div>
         <table>
-            <table class="table-danh-muc table">
+            <table class="table-danh-muc table table-hover">
                 <thead>
                     <tr>
                         <th>STT</th>
