--- a/Tai-Khoan/Tai-Khoan.html
+++ b/Tai-Khoan/Tai-Khoan.html
@@ -59,7 +59,7 @@
                   </a>
                 </li>
                 <li class="item">
-                  <a href="#" class="link flex">
+                  <a href="../Danh-muc/Danh-muc.html" class="link flex">
                     <i class="bx bxs-grid-alt"></i>
                     <span>Danh mục</span>
                   </a>
