update table and home

--- a/Danh-muc/Danh-muc.html
+++ b/Danh-muc/Danh-muc.html
@@ -202,7 +202,7 @@
                 </div>
             </div>
         </div>
-        <table>
+        <div>
             <table class="table-danh-muc table table-hover" id="render">
                 <thead>
                     <tr>
